--- a/res/twig/base.twig
+++ b/res/twig/base.twig
@@ -7,7 +7,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <meta name="description" content="">
             <meta name="author" content="Hendell Jonathan Porras Perez">
-            <link rel="icon" href="/icon.png">
+            <link rel="icon" href="icon.png">
             <title>{{ page_title }}</title>
             <link href="res/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
             <link href="res/css/style.css" rel="stylesheet">
