Primera implementacion en Twig de MaterializeCSS. WIP #30

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,91 +1,3 @@
-/**
-    Author     : Hendel
+/*
+ TODO
 */
-body {
-    padding-top: 50px;
-    margin-bottom: 60px;
-    background-color: #e5e5e5;
-}
-
-html {
-    position: relative;
-}
-
-.navbar-custom {
-    background-color: #57a159;
-    color: #ffffff;
-    border-radius: 0;
-}
-
-.navbar-custom .navbar-nav > li > a {
-    color: #fff;
-}
-
-.navbar-custom .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
-    color: #ffffff;
-    background-color: transparent;
-}
-
-.navbar-custom .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
-    color: #d1caca;
-}
-
-.navbar-custom .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover {
-    background-color: #a2c6a3;
-}
-
-.navbar-custom .navbar-brand {
-    color: #eeeeee;
-}
-
-.navbar-custom .dropdown-menu {
-    background-color: #e7e7e7 !important;
-}
-
-span.brand-uml-logo {
-    background: url(/res/img/uml_logo.png);
-    background-size: 32px;
-    height: 32px;
-    width: 32px;
-    float: left;
-    margin-top: -5px;
-}
-
-canvas.logo_sequence {
-    width: 32px;
-    height: 32px;
-    margin-left: 5px;
-    margin-top: 10px;
-}
-
-.footer {
-    position: absolute;
-    width: 100%;
-    padding-bottom: 25px;
-    background-color: #4a714b;
-}
-
-.container .text-muted {
-    margin: 20px 0;
-    color: white;
-    font-size: 1.2em;
-}
-
-.container .text-muted > a {
-    color: #000;
-    text-decoration: none;
-}
-
-.back-to-top {
-    cursor: pointer;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    display:none;
-}
-
-@media (min-width: 768px) {
-    t.span-toggle {
-        display:none;
-    }
-}
