--- a/res/twig/debug/logger.twig
+++ b/res/twig/debug/logger.twig
@@ -1,29 +1,30 @@
 <div class="container">
+    <h1 class="header center orange-text">Logs</h1>
     {% for log_area, log_contents in logs %}
-        <div class="table-responsive">
-            <h1>{{ log_area }}</h1>
-            <table class="table table-striped table-bordered">
-                <thead>
+        <h1>Area Code: {{ log_area }}</h1>
+        <table class="striped">
+            <thead>
+                <tr>
+                    <th>Class</th>
+                    <th>Function</th>
+                    <th>Microtime</th>
+                    <th>Date</th>
+                    <th>Text</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                {% for log_content in log_contents %}
                     <tr>
-                        <th>Class</th>
-                        <th>Function</th>
-                        <th>Microtime</th>
-                        <th>Date</th>
-                        <th>Text</th>
+                        <td>{{ log_content.class|raw }}</td>
+                        <td>{{ log_content.function|raw }}</td>
+                        <td>{{ log_content.microtime|raw }}</td>
+                        <td>{{ log_content.date|raw }}</td>
+                        <td>{{ log_content.text|raw }}</td>
                     </tr>
-                </thead>
-                <tbody>
-                    {% for log_content in log_contents %}
-                        <tr>
-                            <td>{{ log_content.class|raw }}</td>
-                            <td>{{ log_content.function|raw }}</td>
-                            <td>{{ log_content.microtime|raw }}</td>
-                            <td>{{ log_content.date|raw }}</td>
-                            <td>{{ log_content.text|raw }}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
+                {% endfor %}
+            </tbody>
+        </table>
+        <br>
     {% endfor %}
 </div>
