Añadidas plantillas Twig para formularios de configuracion inicial.

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -1,3 +1,9 @@
-/*
- TODO
-*/
+.icon-block {
+    padding: 0 15px;
+}
+.icon-block .material-icons {
+    font-size: inherit;
+}
+.base-container {
+    min-height: 520px;
+}
