--- a/res/twig/base.twig
+++ b/res/twig/base.twig
@@ -22,7 +22,7 @@
         {% block navbar %}
             {{ include('navbar/navbar.twig') }}
         {% endblock %}
-        <div class="container">
+        <div class="container base-container">
             {% block content %}
                 {{ include('container.twig') }}
             {% endblock %}
