Agregado metodos de configuracion inicial. WIP #12

--- a/res/twig/pages/installer/pageconfig/database_config_form.twig
+++ b/res/twig/pages/installer/pageconfig/database_config_form.twig
@@ -8,26 +8,26 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">public</i>
-                <input required id="server" type="text" class="validate">
+                <input required name="server" id="server" type="text" class="validate">
                 <label for="server">Servidor MySQL</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
                 <i class="material-icons prefix">verified_user</i>
-                <input required id="user" type="text" class="validate">
+                <input required name="user" id="user" type="text" class="validate">
                 <label for="user">Usuario MySQL</label>
             </div>
             <div class="input-field col s6">
                 <i class="material-icons prefix">https</i>
-                <input required id="password" type="password" class="validate">
+                <input required name="password" id="password" type="password" class="validate">
                 <label for="password">Contraseña MySQL</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">sd_storage</i>
-                <input required id="database" type="text" class="validate">
+                <input required name="database" id="database" type="text" class="validate">
                 <label for="database">Base de datos</label>
             </div>
         </div>
