--- a/res/twig/pages/installer/users.twig
+++ b/res/twig/pages/installer/users.twig
@@ -1,4 +1,26 @@
 {% extends "base.twig" %}
 {% block content %}
-    <h1>WIP</h1>
+    <div class="col s12 m7">
+        <h2 class="header">
+            Primera ejecucion de <strong>REC-1</strong>
+        </h2>
+        <hr>
+        <h3>No se encontraron usuarios</h3>
+        <div class="card horizontal">
+            <div class="card-image">
+                <div class="icon-block">
+                    <i class="material-icons" style="font-size: 10em; padding: 5px; color: #f06292;">settings</i>
+                </div>
+            </div>
+            <div class="card-stacked">
+                <div class="card-content">
+                    <p>
+                        <i class="material-icons">build</i>
+                        Al parecer aun no se genero ningún usuario para administrar la página
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% include 'pages/installer/users/form.twig' %}
 {% endblock %}
