--- a/res/twig/base.twig
+++ b/res/twig/base.twig
@@ -4,7 +4,7 @@
         {% block head %}
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-            <title>{{ page_title }}</title>
+            <title>{{ rec1.page.title }}</title>
 
             <!-- CSS  -->
             <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -27,7 +27,7 @@
                 {{ include('container.twig') }}
             {% endblock %}
             {% block debuglogger %}
-                {% if logs %}
+                {% if rec1.debug.logs %}
                     {{ include('debug/logger.twig') }}
                 {% endif %}
             {% endblock %}
