--- a/res/twig/pages/errors/error.twig
+++ b/res/twig/pages/errors/error.twig
@@ -5,7 +5,7 @@
     </div>
     <div class="alert alert-danger" role="alert">
         <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
-        Error código: {{ error_code }}
+        Error código: {{ rec1.debug.error_code }}
         <hr/>
         <span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span>
         Si el error persiste favor contactar con el administrador  de la página
