Agregado datos por defecto a las tablas de Carreras, Peds y Turnos. WIP #10, #12 Se añadio metodo para controlar llaves foraneas. Ahora se usan versiones minificadas de MaterialCSS. Otros cambios y arreglos menores.

--- a/res/twig/base.twig
+++ b/res/twig/base.twig
@@ -8,7 +8,7 @@
 
             <!-- CSS  -->
             <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-            <link href="res/libs/materialize/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+            <link href="res/libs/materialize/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
             <link href="res/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
             <!-- Meta -->
@@ -37,7 +37,7 @@
         {% endblock %}
         <!--  Scripts-->
         <script src="res/libs/jquery/jquery.min.js"></script>
-        <script src="res/libs/materialize/js/materialize.js"></script>
+        <script src="res/libs/materialize/js/materialize.min.js"></script>
         <script src="res/js/script.js"></script>
     </body>
 </html>
