Agregado Logo e Icono. WIP #16 Otros cambios y arreglos menores a modulos varios.

--- a/res/twig/base.twig
+++ b/res/twig/base.twig
@@ -15,7 +15,7 @@
             <meta name="description" content="">
             <meta name="author" content="Hendell Jonathan Porras Perez">
 
-            <link rel="icon" href="icon.png">
+            <link rel="icon" href="gfx/img/icon.png">
         {% endblock %}
     </head>
     <body>
