--- a/res/twig/container.twig
+++ b/res/twig/container.twig
@@ -1,1 +1,11 @@
-<h1>Página por defecto</h1>
+<div class="row">
+    <div class="col s4 offset-s4">
+        <img class="responsive-img" src="gfx/img/Banner_1.png">
+    </div>
+</div>
+<div class="divider"></div>
+<div class="row">
+    <div class="col s12">
+        <h1>Página por defecto</h1>
+    </div>
+</div>
