--- a/res/twig/base.twig
+++ b/res/twig/base.twig
@@ -5,6 +5,7 @@
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
             <title>{{ rec1.page.title }}</title>
+            <BASE href="http://{{ rec1.page.url }}">
 
             <!-- CSS  -->
             <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
