--- a/res/twig/navbar/navbar.twig
+++ b/res/twig/navbar/navbar.twig
@@ -1,4 +1,18 @@
 <div class="navbar-fixed">
+    <ul id="navbar_user_dropdown" class="dropdown-content">
+        <li>
+            <a href="user/{{ rec1.user.logged.getId }}">
+                <i class="small material-icons left">account_box</i>
+                Perfil
+            </a>
+        </li>
+        <li>
+            <a href="logout">
+                <i class="small material-icons left">eject</i>
+                Salir
+            </a>
+        </li>
+    </ul>
     <nav class="teal lighten-2" role="navigation">
         <div class="nav-wrapper container">
             <a id="logo-container" href="home" class="brand-logo">
@@ -6,17 +20,18 @@
                 REC-1
             </a>
             <ul class="right hide-on-med-and-down">
-                {% for link, icon in rec1.page.navbar %}
+                {% for link, item in rec1.page.navbar %}
                     <li>
-                        <a href="{{ link }}" class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="{{ link }}">
-                            <i class="material-icons">{{ icon }}</i>
+                        <a href="{{ link }}" class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="{{ item.name }}">
+                            <i class="material-icons">{{ item.icon }}</i>
                         </a>
                     </li>
                 {% endfor %}
                 <li>
-                    <a href="user/{{ rec1.user.logged.getId }}" class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="{{ rec1.user.logged.getFullName }}">
-                        <i class="material-icons left">perm_identity</i>
+                    <a class="dropdown-button" href="#!" data-activates="navbar_user_dropdown">
+                        <i class="material-icons left">account_circle</i>
                         {{ rec1.user.logged.getFullName|split(' ')[0] }}
+                        <i class="material-icons right">arrow_drop_down</i>
                     </a>
                 </li>
             </ul>
