--- a/res/twig/pages/home.twig
+++ b/res/twig/pages/home.twig
@@ -1,267 +1,58 @@
+{% import "pages/home/cards.twig" as cards %}
 {% extends "base.twig" %}
 {% block content %}
-<blockquote>
-    <h1><i class="medium material-icons">apps</i>Tabla de contenidos</h1>
-</blockquote>
-<div class="divider"></div>
-<div class="row">
-    <div class="col s6">
-        <h2 class="header">Usuarios</h2>
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">account_box</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">account_box</i>Administrar usuarios</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
+    <blockquote>
+        <h1><i class="medium material-icons">apps</i>Tabla de contenidos</h1>
+    </blockquote>
+    <div class="divider"></div>
+    <div class="row">
+        <div class="col s6">
+            {{ cards.titled({'title': 'Usuarios', 'icon': 'account_box', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'link': { 'url': '#', 'title': 'Administrar usuarios' }, 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+        </div>
+        <div class="col s6">
+            {{ cards.titled({'title': 'Administracion', 'icon': 'build', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'link': { 'url': '#', 'title': 'Configuracion de la pagina' }, 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
         </div>
     </div>
-    <div class="col s6">
-        <h2 class="header">Administracion</h2>
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">build</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">build</i>Configuracion de la pagina</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
+    <div class="divider"></div>
+    <div class="row">
+        <div class="col s4">
+            {{ cards.horizontal({'title': 'Carreras', 'icon': 'directions_run', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+        </div>
+        <div class="col s4">
+            {{ cards.horizontal({'title': 'Peds', 'icon': 'business', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+        </div>
+        <div class="col s4">
+            {{ cards.horizontal({'title': 'Turnos', 'icon': 'donut_small', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
         </div>
     </div>
-</div>
-<div class="divider"></div>
-<div class="row">
-    <div class="col s4">
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">directions_run</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">directions_run</i>Carreras</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
+    <div class="divider"></div>
+    <h1 class="header">Formatos</h1>
+    <div class="row">
+        <div class="col s3">
+            {{ cards.normal({'title': 'Formato', 'icon': 'assignment_turned_in', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+        </div>
+        <div class="col s3">
+            {{ cards.normal({'title': 'Formato', 'icon': 'assignment_turned_in', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+        </div>
+        <div class="col s3">
+            {{ cards.normal({'title': 'Formato', 'icon': 'assignment_turned_in', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+        </div>
+        <div class="col s3">
+            {{ cards.normal({'title': 'Formato', 'icon': 'assignment_turned_in', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
         </div>
     </div>
-    <div class="col s4">
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">donut_small</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">donut_small</i>Turnos</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
+    <div class="row">
+        <div class="col s3">
+            {{ cards.normal({'title': 'Formato', 'icon': 'assignment_turned_in', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+        </div>
+        <div class="col s3">
+            {{ cards.normal({'title': 'Formato', 'icon': 'assignment_turned_in', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+        </div>
+        <div class="col s3">
+            {{ cards.normal({'title': 'Formato', 'icon': 'assignment_turned_in', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+        </div>
+        <div class="col s3">
+            {{ cards.normal({'title': 'Formato', 'icon': 'assignment_turned_in', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
         </div>
     </div>
-    <div class="col s4">
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">business</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">business</i>Peds</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="divider"></div>
-<h1 class="header">Formatos</h1>
-<div class="row">
-    <div class="col s3">
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">business</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">business</i>Peds</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col s3">
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">business</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">business</i>Peds</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col s3">
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">business</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">business</i>Peds</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col s3">
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">business</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">business</i>Peds</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col s3">
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">business</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">business</i>Peds</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col s3">
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">business</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">business</i>Peds</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col s3">
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">business</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">business</i>Peds</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
-        </div>
-    </div>
-    <div class="col s3">
-        <div class="card horizontal">
-            <div class="card-image waves-effect waves-block waves-light">
-                <i class="activator large material-icons">business</i>
-            </div>
-            <div class="card-stacked">
-                <div class="card-content">
-                    <p>I am a very simple card. I am good at containing small bits of information.</p>
-                </div>
-                <div class="card-action">
-                    <a href="#"><i class="material-icons">business</i>Peds</a>
-                </div>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
-        </div>
-    </div>
-</div>
 {% endblock %}
