--- a/res/twig/pages/home.twig
+++ b/res/twig/pages/home.twig
@@ -7,22 +7,22 @@
     <div class="divider"></div>
     <div class="row">
         <div class="col s6">
-            {{ cards.titled({'title': 'Usuarios', 'icon': 'account_box', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'link': { 'url': '#', 'title': 'Administrar usuarios' }, 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+            {{ cards.titled({'title': 'Usuarios', 'icon': 'account_box', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'link': { 'url': 'user/', 'title': 'Administrar usuarios' }, 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
         </div>
         <div class="col s6">
-            {{ cards.titled({'title': 'Administracion', 'icon': 'build', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'link': { 'url': '#', 'title': 'Configuracion de la pagina' }, 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+            {{ cards.titled({'title': 'Administracion', 'icon': 'build', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'link': { 'url': 'page', 'title': 'Configuracion de la pagina' }, 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
         </div>
     </div>
     <div class="divider"></div>
     <div class="row">
         <div class="col s4">
-            {{ cards.horizontal({'title': 'Carreras', 'icon': 'directions_run', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+            {{ cards.horizontal({'title': 'Carreras', 'icon': 'directions_run', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': 'formats/carreras', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
         </div>
         <div class="col s4">
-            {{ cards.horizontal({'title': 'Peds', 'icon': 'business', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+            {{ cards.horizontal({'title': 'Peds', 'icon': 'business', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': 'formats/peds', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
         </div>
         <div class="col s4">
-            {{ cards.horizontal({'title': 'Turnos', 'icon': 'donut_small', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': '#', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+            {{ cards.horizontal({'title': 'Turnos', 'icon': 'donut_small', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': 'formats/turnos', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
         </div>
     </div>
     <div class="divider"></div>
