--- a/res/twig/pages/home.twig
+++ b/res/twig/pages/home.twig
@@ -16,13 +16,13 @@
     <div class="divider"></div>
     <div class="row">
         <div class="col s4">
-            {{ cards.horizontal({'title': 'Carreras', 'icon': 'directions_run', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': 'formats/carreras', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+            {{ cards.horizontal({'title': 'Carreras', 'icon': 'directions_run', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': 'formats/carreras/', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
         </div>
         <div class="col s4">
-            {{ cards.horizontal({'title': 'Peds', 'icon': 'business', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': 'formats/peds', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+            {{ cards.horizontal({'title': 'Peds', 'icon': 'business', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': 'formats/peds/', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
         </div>
         <div class="col s4">
-            {{ cards.horizontal({'title': 'Turnos', 'icon': 'donut_small', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': 'formats/turnos', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
+            {{ cards.horizontal({'title': 'Turnos', 'icon': 'donut_small', 'content': 'I am a very simple card. I am good at containing small bits of information.', 'url': 'formats/turnos/', 'help': 'Here is some more information about this product that is only revealed once clicked on.' }) }}
         </div>
     </div>
     <div class="divider"></div>
