--- a/res/twig/navbar/navbar.twig
+++ b/res/twig/navbar/navbar.twig
@@ -15,10 +15,17 @@
     </ul>
     <nav class="teal lighten-2" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="home" class="brand-logo">
+            <a id="logo-container" href="home" class="brand-logo center">
                 <i class="material-icons">album</i>
                 REC-1
             </a>
+            <ul class="left hide-on-med-and-down">
+                <li>
+                    <a href="#!" data-activates="slide-out" class="button-collapse show-on-large">
+                        <i class="material-icons">menu</i>
+                    </a>
+                </li>
+            </ul>
             <ul class="right hide-on-med-and-down">
                 {% for link, item in rec1.page.navbar %}
                     <li>
@@ -38,3 +45,6 @@
         </div>
     </nav>
 </div>
+{% block sidebar %}
+    {{ include('sidebar/sidebar.twig') }}
+{% endblock %}
